# simple_CAR

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  139442p1.debug  CMakeLists.txt  LICENSE  Makefile  README.md  abc_100x_unsafe.sh  abc_200x_safe.sh  btor2aiger.cpp  btorasaig.py  build_simplecar_cadical.sh  notes.txt  setup_btor2.sh  temp.aag  temp.txt  tempold.txt
btor2/: btorasaig.py  setup_btor2.sh
scripts/: abc_200x_safe.sh  car_fask_cases.sh  car_safe_compare.sh  car_stat.py  car_unsafe_compare.sh  car_vis_comparison.sh  check_unsafe.sh  count_repeated_states.sh  unknown_vis.sh
src/: CarTypes.h  IncrCheckerHelpers.cpp  IncrCheckerHelpers.h  Log.cpp  Log.h  Restart.h  Settings.cpp  Settings.h  SimpleCAR.cpp  SimpleCAR.h  WitnessBuilder.cpp  WitnessBuilder.h  main.cpp
src/alg/: BCAR.cpp  BCAR.h  BMC.cpp  BMC.h  BaseAlg.h  BasicIC3.cpp  BasicIC3.h  FCAR.cpp  FCAR.h  IC3.cpp  IC3.h  IncrAlg.h  KFAIR.cpp  KFAIR.h  KIND.cpp  KIND.h  L2S.cpp  L2S.h  RLive.cpp  RLive.h  rlive.cpp  rlive.h
src/check/: BMC.cpp  BMC.h  BackwardChecker.cpp  BackwardChecker.h  BaseChecker.h  BasicIC3.cpp  BasicIC3.h  CleanCARCheckerF.cpp  CleanCARCheckerF.h  ForwardChecker.cpp  ForwardChecker.h
src/cudd-2.4.1/: LICENSE  Makefile  Makefile.dist  README  RELEASE.NOTES  setup.sh  shutdown.sh
src/cudd-2.4.1/cudd/: Makefile  astyle  cudd.h  cuddAPI.c  cuddAddAbs.c  cuddAddApply.c  cuddAddApply.c.orig  cuddAddFind.c  cuddAddInv.c  cuddAddIte.c  cuddAddNeg.c  cuddAddWalsh.c  cuddAndAbs.c  cuddAnneal.c  cuddApa.c  cuddApprox.c  cuddBddAbs.c  cuddBddCorr.c  cuddBddIte.c  cuddBridge.c  cuddCache.c  cuddCheck.c  cuddClip.c  cuddCof.c  cuddCompose.c  cuddDecomp.c  cuddEssent.c  cuddExact.c  cuddExport.c  cuddGenCof.c  cuddGenetic.c  cuddGroup.c  cuddHarwell.c  cuddInit.c  cuddInteract.c  cuddLCache.c  cuddLevelQ.c  cuddLinear.c  cuddLiteral.c  cuddMatMult.c  (+27 more)
src/cudd-2.4.1/cudd/doc/: cudd.doc  cudd.ps  cuddAllAbs.html  cuddAllDet.html  cuddExtAbs.html  cuddExtDet.html  cuddIntro.html  footnode.html  node1.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html
src/cudd-2.4.1/dddmp/: Makefile  RELEASE_NOTES  dddmpBinary.c  dddmpConvert.c  dddmpDbg.c  dddmpDdNodeBdd.c  dddmpDdNodeCnf.c  dddmpLoad.c  dddmpLoadCnf.c  dddmpNodeAdd.c  dddmpNodeBdd.c  dddmpNodeCnf.c  dddmpStoreAdd.c  dddmpStoreBdd.c  dddmpStoreCnf.c  dddmpStoreMisc.c  dddmpUtil.c  testdddmp  testdddmp.c
src/cudd-2.4.1/dddmp/doc/: cmdIndex.html  commands.html  credit.html  dddmp-2.0-A4.ps  dddmp-2.0-Letter.ps  dddmpAllAbs.html  dddmpAllByFile.html  dddmpAllByFunc.html  dddmpAllDet.html  dddmpAllFile.html  dddmpDesc.html  dddmpExt.html  dddmpExtAbs.html  dddmpExtDet.html  dddmpTitle.html  packages.html  pkgIndex.html
src/cudd-2.4.1/dddmp/exp/: 0.add  0.bdd  0or1.bdd  1.add  2and3.bdd  3.bdd  4.bdd  4.bdd.bis2  4.cnf  4.cnf.bis  4.max2  4bis.bdd  4xor5.bdd  5.bdd  one.bdd  runAllTest.script  s27RP1.bdd  s27deltaDddmp1.bdd  s27deltaDddmp1.bdd.bis  s27deltaDddmp2.bdd  test1.script  test2.script  test3.script  test4.script  test5.script  test6.script  test7.script
src/cudd-2.4.1/epd/: Makefile  epd.c
src/cudd-2.4.1/include/: cudd.h  cuddInt.h  cuddObj.hh  mtr.h  util.h
src/cudd-2.4.1/mnemosyne/: Makefile  README  mnemalyse.c  mnemconf.h  mnemosyne.c  mtest.c
src/cudd-2.4.1/mtr/: Makefile  Makefile.sis  mtrBasic.c  mtrGroup.c  mtrInt.h  test.groups  testmtr  testmtr.c
src/cudd-2.4.1/mtr/doc/: mtr.doc  mtrAllAbs.html  mtrAllDet.html  mtrExtAbs.html  mtrExtDet.html
src/cudd-2.4.1/nanotrav/: C17.blif  C880.blif  Makefile  README  bnet.c  bnet.h  chkMterm.c  main.c  mult32a.blif  nanotrav  nanotrav.1  ntr.c  ntr.h  ntrBddTest.c  ntrHeap.c  ntrMflow.c  ntrShort.c  ntrZddTest.c  rcn25.blif  s27.blif  tst.sh  ucbqsort.c
src/cudd-2.4.1/nanotrav/doc/: bnetAllAbs.html  bnetAllDet.html  bnetExtAbs.html  bnetExtDet.html  ntrAllAbs.html  ntrAllDet.html  ntrExtAbs.html  ntrExtDet.html
src/cudd-2.4.1/sis/: Makefile.sis  cuddBdd.h  cuddBddPort.c  cuddPwPt.c  st.c  st.h
src/cudd-2.4.1/st/: Makefile  st.c
src/cudd-2.4.1/st/doc/: stAllAbs.html  stAllDet.html  stExtAbs.html  stExtDet.html
src/cudd-2.4.1/util/: Makefile  cpu_stats.c  cpu_time.c  datalimit.c  getopt.c  pathsearch.c  pipefork.c  prtime.c  ptime.c  safe_mem.c  saveimage.c  strsav.c  test-res.c  test-sav.c  texpand.c  tmpfile.c
src/model/: AigerModel.cpp  AigerModel.h  Branching.cpp  Branching.h  CadicalSolver.cpp  CadicalSolver.h  CarSolver.cpp  CarSolver.h  CarSolver_cadical.cpp  CarSolver_cadical.h  CircuitGraph.cpp  CircuitGraph.h  DAGCNFSimplifier.cpp  DAGCNFSimplifier.h  IOverSequence.h  ISolver.h  IncrCheckerHelpers.cpp  IncrCheckerHelpers.h  InvSolver.cpp  InvSolver.h  KissatSolver.cpp  KissatSolver.h  Log.cpp  Log.h  MainSolver.cpp  MainSolver.h  MinicoreSolver.cpp  MinicoreSolver.h  MinisatSolver.cpp  MinisatSolver.h  Model.cpp  Model.h  OverSequence.cpp  OverSequence.h  OverSequenceForProp.cpp  OverSequenceForProp.h  OverSequenceNI.cpp  OverSequenceNI.h  OverSequenceSet.cpp  OverSequenceSet.h  (+15 more)
src/sat/: CadicalSolver.cpp  CadicalSolver.h  ISolver.h  KissatSolver.cpp  KissatSolver.h  MinicoreSolver.cpp  MinicoreSolver.h  MinisatSolver.cpp  MinisatSolver.h  SATSolver.cpp  SATSolver.h
src/sat/cadical/: configure
src/sat/cadical/src/: assume.cpp  cadical.hpp  external.cpp  external.hpp  internal.hpp  makefile  solver.cpp
src/sat/minicore/: Makefile  README.md
src/sat/minicore/src/: bench.cpp  dimacs.cpp  dimacs.h  main.cpp  solver.cpp  solver.h  solver_types.h  utils.hpp
src/sat/minisat/core/: Dimacs.h  Main.cc  Solver.cc  SolverTypes.h
src/sat/minisat/utils/: Options.h  ParseUtils.h  System.cc
src/visualization/: Vis.cpp  Vis.h
